fix: gap of menu in header for 1400px screen

--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -3,7 +3,7 @@
     align-items: center;
     column-gap: 6rem;
 
-    @include breakpoint(large-desktop) {
+    @include breakpoint(tablet) {
         column-gap: 3rem;
     }
 
